4-create-aws-vpc.tf
# Creating the VPC
resource "aws_vpc" "dev-vpc" {
  cidr_block = "10.0.0.0/16"
  
  tags = {
    Name = "DEV-VPC"
  }
}
